<resources>
    <string name="app_name">BookBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="mail_suffix">\@gmail.com</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">logo</string>
    <string name="error_password_len">Password must contain at least 8 characters.</string>
    <string name="error_password_same">Passwords must be the same.</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="username">Tomasz Kowalski</string>
    <string name="score_label">Score: </string>
    <string name="score">13</string>
    <string name="mail_label">Mail:</string>
    <string name="mail">t.kowalski@gmail.com</string>
    <string name="user_history_button">History</string>
    <string name="user_photo_descr">User photo</string>
    <string name="like_button">like button</string>
    <string name="dislike_button">dislike button</string>
    <string name="offer_name">Offer name</string>
    <string name="location">Location:\nPoland\nMazowieckie\nWarsaw\nUrocza 24/10 Street</string>
    <string name="phone_number">phone number:</string>
    <string name="description">Description:</string>
    <string name="description_text">A very good book.</string>
    <string name="profile_button">Book owner</string>
    <string name="new_offer">New Offer</string>
    <string name="add_photo">Add photo</string>
    <string name="add_offer">Add offer</string>
    <string name="add_location">Location:</string>
    <string name="title_hint">Title</string>
    <string name="add_state">State</string>
    <string name="add_city">City</string>
    <string name="add_street">Street</string>
    <string name="add_phone_number">Phone number</string>
    <string name="phone_number_ex">Example: 123456789</string>
    <string name="add_description">Say something about your book ;)</string>
    <string name="description_ex">Example: A long time ago in a galaxy far, far away....</string>
    <string name="find_book">Find your new book!</string>
    <string name="search">Search by: book title, book\'s author, offer\'s author</string>
    <string name="offer1">Offer 1</string>
    <string name="offer2">Offer 2</string>
    <string name="offer3">Offer 3</string>
    <string name="search_action">Search</string>
    <string name="new_book">New Book</string>
    <string name="profile">Profile</string>
    <string name="book_info_header">Book:</string>
    <string name="author_hint">Author</string>
    <string name="book_image">book image</string>
    <string name="sign_out">Sign out</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="state">state:</string>
    <string name="email">email:</string>
    <string name="city">city:</string>
    <string name="example_state">Mazowsze</string>
    <string name="example_city">Warsawa</string>
    <string name="example_phone_number">420420420</string>
    <string name="example_email">moj_mail@gmail.com</string>
</resources>
