<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.mimuw.bookbook.ui.UserProfile">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/reg_margin"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/username"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reg_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username">

        <ImageButton
            android:id="@+id/dislike_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/reg_margin"
            android:background="@null"
            android:contentDescription="@string/dislike_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_dislike" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/dislike_button"
            android:layout_toLeftOf="@+id/dislike_button"
            android:layout_toEndOf="@+id/like_button"
            android:layout_toRightOf="@+id/like_button"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/reg_margin"
            android:background="@null"
            android:contentDescription="@string/like_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_like" />

    </RelativeLayout>

    <TextView
        android:id="@+id/mail_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/reg_margin"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:text="@string/mail"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_history_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/user_history_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/sign_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_text" />

</androidx.constraintlayout.widget.ConstraintLayout>