<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_sign"
    tools:context=".NewOffer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/new_offer"
            android:textAllCaps="true"
            android:textColor="@color/primary_dark"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_photo_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/add_photo"
            app:icon="@drawable/ic_add"
            app:iconGravity="start"
            app:iconTint="@color/primary_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:text="@string/book_info_header"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_title_text_input"
            style="@style/SignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/title_hint"
            android:hint="@string/title_hint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/book_author_text_input"
            style="@style/SignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/author_hint"
            android:hint="@string/author_hint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/book_author_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:text="@string/add_location"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/state_text_input"
            style="@style/SignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/add_state"
            android:hint="@string/add_state"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/state_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_text_input"
            style="@style/SignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/add_city"
            android:hint="@string/add_city"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:text="@string/add_phone_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_text_input"
            style="@style/SignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_ex"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:text="@string/add_description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text_input"
            style="@style/SignUpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_ex"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="10"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_offer_button"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/add_offer"
                app:icon="@drawable/ic_add"
                app:iconGravity="start"
                app:iconTint="@color/primary_dark" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>