<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_margin="@dimen/reg_margin">

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:src="@drawable/book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/book_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/reg_margin"
            android:text="@string/title"
            android:textSize="25sp"
            android:fontFamily="@font/alex_brush" />

        <TextView
            android:id="@+id/author"
            android:layout_margin="@dimen/reg_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alex_brush"
            android:text="@string/author"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>