<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_sign"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/book"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="132dp"
            android:fontFamily="@font/alex_brush"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_text_input"
            style="@style/SignInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mail_hint"
            android:hint="@string/mail_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/SignInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/reg_margin">

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonStyle"
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="@dimen/reg_margin"
                android:layout_marginLeft="@dimen/reg_margin"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/sign_in" />

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonStyle"
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/sign_in_button"
                android:layout_toLeftOf="@id/sign_in_button"
                android:text="@string/sign_up"
                app:icon="@drawable/ic_add"
                app:iconGravity="start"
                app:iconTint="@color/primary_dark" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>