<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_sign"
    tools:context=".HistoryOfferInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:text="@string/show_offerts"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offer1"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/offer1"
            app:iconGravity="start"
            app:iconTint="@color/primary_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offer2"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/offer2"
            app:iconGravity="start"
            app:iconTint="@color/primary_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/offer3"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/offer3"
            app:iconGravity="start"
            app:iconTint="@color/primary_dark" />

    </LinearLayout>

</ScrollView>
